@@ -1,5 +1,6 @@
 Changes for 1.1alpha5:
 
+ - configurable format of map output (png, jpg) (Alexei)
  - special processing of 'b' and 'bps' (bytes). Take 1000 for Kilos (Alexei)
  - fix of crash of zabbix_server when processing notification macros (Alexei)
  - added form for managing images (Alexei)
